Updated trnslated abstracts

--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -339,13 +339,14 @@ read.csv("../Tables/kw_regional.csv") %>%
 
 # Translated Abstracts
 
-Climate change is shifting the distribution of shared fish stocks between neighboring countries’ Exclusive Economic Zones (EEZ) and the high seas. The timescale of these transboundary shifts determines how climate change will affect international fisheries governance. Coupling a large ensemble simulation of an Earth system model to a dynamic population model, we show that by 2030, under a high emission climate change scenario, 23% of transboundary stocks will have shifted and 78% of the world’s EEZs will have experienced at least one shifting stock. By the end of this century, projections under a high emissions scenario show 81% of EEZs waters with at least one shifting stock and a total of 45% of stocks shifting globally. Many countries that are highly dependent on fisheries for livelihood and food security emerge as hotspots for transboundary shifts. These hotspots are characterized by early shifts in the distribution of a important number of transboundary stocks. Existing fisheries agreements need to be assessed for their capacity to address the social-ecological implications of climate change driven transboundary shifts and strengthened where necessary to limit potential conflict between the parties of interest, while new agreements need to be anticipatory and consider these concerns to be resilient to global change.
-
 ## Español
 
 El cambio climático está afectando la distribución de poblaciones transfronterizas de fauna marina que se encuentran en Zonas Económicas Exclusivas (ZEEs) de países vecinos y en el alta mar. Los efectos del cambio climático en el manejo pesquero internacional estarán determinados por la escala temporal de dichos desplazamientos. Para determinar esa escala temporal, el presente estudio combinó un modelo dinámico poblacional, con una serie de simulaciones de un modelo del sistema terrestre, bajo un escenario de cambio climático de altas emisiones. Los resultados siguieren que para 2030, el 23% de las poblaciones transfronterizas se habrán desplazado y en el 78% de las ZEEs del mundo habrán experimentado cambios en la distribución de al menos una población transfronteriza. Para fines de este siglo, las proyecciones muestran que el 45% de las poblaciones transfronterizas globales habrán cambiado su distribución y 81% de las ZEEs tendrán al menos una población en movimiento. La magnitud de tal desplazamiento se reflejará en un cambio promedio del 59% de la proporción de captura de poblaciones transfronterizas entre ZEEs vecinas para el 2030. Muchos países que dependen de la pesca para sustento económico y seguridad alimentaria emergen como zonas críticas de cambios transfronterizos. Estas zonas se caracterizan por cambios tempranos en la distribución de un número importante de poblaciones transfronterizas. Por lo tanto, los acuerdos pesqueros internacionales deben evaluarse por su capacidad para responder a los impactos socio-ecológicos del desplazamiento de poblaciones transfronterizas debido al cambio climático. Dichos acuerdos deberán fortalecerse, cuando sea necesario, para limitar los posibles conflictos entre las partes de interés y evitar amenazar la sustentabilidad del recurso. Así mismo, los nuevos acuerdos que vayan a establecerse deberán considerar los posibles cambios en la distribución de poblaciones compartidas (y la incertidumbre asociada) para anticiparse a dichos conflictos y aumentar la resiliencia frente al cambio climático.
 
-## François 
+## Français 
+
+Le changement climatique altère la distribution des stocks de poissons exploités posant de sérieux problèmes de juridiction et gestion des espèces partagées entre pays voisins, et/ou avec la haute mer. C’est en analysant l’échelle de temps de ces migrations transfrontalières que l’impact du changement climatique sur la gouvernance mondiale des pêches peut être évalué. Dans cette étude, nous explorons cette échelle de temps à l'aide d’un modèle de dynamique des populations marines exploitées couplé à des simulations dérivées d’un ensemble de modèles globaux océan-atmosphère. Les résultats montrent que d’ici 2030, pour le scénario à hautes émissions, 23% des stocks transfrontaliers auront changé de distribution et que 78% des zones économiques exclusives (ZEE) expérimenteront au moins une nouvelle espèce transfrontalière. A la fin du siècle, et pour ce même scénario, 81% des ZEE auront au moins une espèce transfrontalière et 45% des stocks transfrontaliers auront changé de distribution. La magnitude de tels changements de distribution est ici quantifiée par la variation dans la proportion de capture entre ZEE partageant ce stock transfrontalier. D’ici 2030, de tels changements entre ZEE seront de l’ordre de 59% à l'échelle globale, avec de nombreux  pays dont la qualité de vie et la sécurité alimentaire dépendent de la pêche émergeant comme zones à haut risque. Ces zones se caractérisent par le déplacement précoce d’un grand nombre de stocks transfrontaliers . A la lumière de ces résultats, les traités et accords de pêche internationaux doivent être évalués pour leur capacité à répondre aux implications socio-écologiques du changement climatique et renégocier afin d’éviter tout conflit entre pays voisins. En anticipant des changements potentiels de distribution entre stocks transfrontaliers, tout nouvel accord de pêche se voudra plus résilient aux effets du changement climatique 
+
 
 ## Português 
 
